Fix appstream runner results appearing before apps/kcms

BUG: 457600